@@ -226,6 +226,9 @@ Function check_previous_install
   StrCpy $UpgradeInstall "0"
   IfFileExists "$DATADIR\@INC_CPACK_ARANGO_DATA_DIR@\SERVER" OldFound
   IfFileExists "$DATADIR\@INC_CPACK_ARANGO_DATA_DIR@\ENGINE" OldFound
+  IfSilent 0 continueNoDirectMatch
+    IfFileExists "$DATADIR\ENGINE" OldFound
+continueNoDirectMatch:
   DetailPrint "This is a fresh install."
   return
 OldFound:
@@ -238,7 +241,16 @@ Function stop_old_service
      SimpleSC::StopService    '${TRI_SVC_NAME}' 0 30
      Call WaitForServiceDown
      SimpleSC::RemoveService  '${TRI_SVC_NAME}'
+     Pop $0 ; returns an errorcode (<>0) otherwise success (0)
+     IntCmp $0 0 Done_stop_old
+     IntCmp $0 1060 Done_stop_old ; service not there, we don't care.
+     Push $0
+     SimpleSC::GetErrorMessage
+     Pop $0
+     DetailPrint 'Stopping ArangoDB fails - Reason: $0'
+     MessageBox MB_OK 'Stopping ArangoDB fails - Reason: $0'
   ${EndIf}
+Done_stop_old:
 FunctionEnd
 
 
@@ -731,7 +743,7 @@ Function UpgradeExisting
   push ${ARANGO_EXIT_ALREADY_RUNNING}
   pop $0
 retryDetectUpgradeNeeded:
-  ExecWait "$INSTDIR\${SBIN_DIR}\arangod.exe --server.rest-server false --log.foreground-tty false --database.check-version" $0
+  ExecWait "$INSTDIR\${SBIN_DIR}\arangod.exe --server.rest-server false --log.foreground-tty false --database.check-version $DATADIR" $0
   DetailPrint "done Checking whether an existing database needs upgrade: $0"
   ${If} $0 == ${ARANGO_EXIT_ALREADY_RUNNING}
   ${OrIf} $0 == ${ARANGO_EXIT_COULD_NOT_LOCK}
@@ -759,7 +771,7 @@ retryDetectUpgradeNeeded:
     ${EndIf}
     DetailPrint "Attempting to run database upgrade: "
     ; Now actually do the upgrade
-    ExecWait "$INSTDIR\${SBIN_DIR}\arangod.exe --server.rest-server false  --log.level error --database.auto-upgrade true" $0
+    ExecWait "$INSTDIR\${SBIN_DIR}\arangod.exe --server.rest-server false  --log.level error --database.auto-upgrade true $DATADIR" $0
     DetailPrint "Done running database upgrade: $0"
     ${If} $0 != 0
       !insertmacro printExitCode $0 "the Upgrade failed, please do a manual upgrade" ""
@@ -886,6 +898,13 @@ FunctionEnd
 ;Installer Sections
 
 Section "-Core installation"
+  IfSilent 0 continueBaseInstall
+    ; this would be called inside the UI code:
+    Call check_previous_install
+    ${If} $UpgradeInstall == "1"
+      Call stop_old_service
+    ${EndIf}
+continueBaseInstall:
   ;Use the entire tree produced by the INSTALL target.  Keep the
   ;list of directories here in sync with the RMDir commands below.
   SetOutPath "$INSTDIR"
@@ -969,9 +988,6 @@ Section "-Core installation"
   ${If} $LOGDIR != ""
     CreateDirectory $LOGDIR
   ${EndIf}
-
-  ; non-interactive install only hits us here?
-  Call check_previous_install
 
   CreateDirectory $APPDIR
   Call assignFileRights
@@ -1255,6 +1271,7 @@ SectionEnd
 ; "Program Files" for AllUsers, "My Documents" for JustMe...
 
 var CMDINSTDIR
+var CMDUPGRADE
 
 Function .onInit
   ; are we allowed to install admin in first place?
@@ -1292,7 +1309,17 @@ Function .onInit
   ${EndIf}
 noInstDir:
 
-   # we only want to manipulate APPDIR here if /APPDIR is really set!
+  # $AUTOMATIC_UPDATE would be set later in the UI code (if)
+  StrCpy $AUTOMATIC_UPDATE "0"
+  ${GetParameters} $R0
+  ClearErrors
+  ${GetOptions} $R0 "/UPGRADE="        $CMDUPGRADE
+  IfErrors noUpgrade 0
+  IfSilent 0 noUpgrade
+  StrCpy $AUTOMATIC_UPDATE "$CMDUPGRADE"
+noUpgrade:
+
+  # we only want to manipulate APPDIR here if /APPDIR is really set!
   ${GetParameters} $R0
   ClearErrors
   ${GetOptions} $R0 "/APPDIR="        $CMDINSTDIR
