@@ -38,6 +38,7 @@ set(ARANGODB_URL_INFO_ABOUT "@ARANGODB_URL_INFO_ABOUT@")
 set(ARANGODB_SOURCE_DIR "@ARANGODB_SOURCE_DIR@")
 set(ARANGODB_VERSION "@ARANGODB_VERSION@")
 set(ARANGODB_PACKAGE_ARCHITECTURE "@ARANGODB_PACKAGE_ARCHITECTURE@")
+set(ARANGODB_PACKAGE_VENDOR "@ARANGODB_PACKAGE_VENDOR@")
 set(ARANGODB_PACKAGE_CONTACT "@ARANGODB_PACKAGE_CONTACT@")
 
 set(CMAKE_INSTALL_FULL_BINDIR "@CMAKE_INSTALL_FULL_BINDIR@")
@@ -73,6 +74,7 @@ set(ARANGODB_JS_VERSION "@ARANGODB_JS_VERSION@")
 ################################################################################
 
 set(CPACK_PACKAGE_VERSION "${ARANGODB_VERSION}")
+set(CPACK_PACKAGE_VENDOR  ${ARANGODB_PACKAGE_VENDOR})
 set(CPACK_PACKAGE_CONTACT ${ARANGODB_PACKAGE_CONTACT})
 
 if (${USE_ENTERPRISE})
@@ -127,7 +129,7 @@ INSTALL(FILES ${CMAKE_INSTALL_SYSTEM_RUNTIME_COMPONENT} DESTINATION ${CMAKE_INST
 set (ICON_PATH "${W_INSTALL_FILES}/Icons/")
 install(DIRECTORY "${ICON_PATH}" DESTINATION "resources")
 
-file(TO_NATIVE_PATH "resources/Icons/arangodb.ico" RELATIVE_ARANGO_ICON)
+file(TO_NATIVE_PATH "resources/arangodb.ico" RELATIVE_ARANGO_ICON)
 file(TO_NATIVE_PATH "${ICON_PATH}arangodb.bmp" ARANGO_IMG)
 file(TO_NATIVE_PATH "${ICON_PATH}/arangodb.ico" ARANGO_ICON)
 
